[gd_scene load_steps=2 format=3 uid="uid://b1eg8mmoabojc"]

[ext_resource type="Script" path="res://Scripts/scene_1.gd" id="1_pcngm"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_pcngm")

[node name="Label1" type="Label" parent="."]
offset_left = 16.0
offset_top = 20.0
offset_right = 73.0
offset_bottom = 43.0
text = "players"

[node name="Button1" type="Button" parent="."]
offset_left = 60.0
offset_top = 75.0
offset_right = 81.0
offset_bottom = 95.0

[node name="Label2" type="Label" parent="."]
offset_left = 39.0
offset_top = 72.0
offset_right = 51.0
offset_bottom = 95.0
text = "5
"

[node name="Button2" type="Button" parent="."]
offset_left = 7.0
offset_top = 75.0
offset_right = 28.0
offset_bottom = 95.0

[node name="Button3" type="Button" parent="."]
offset_left = 33.0
offset_top = 115.0
offset_right = 56.0
offset_bottom = 131.0

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed_start"]
